2012-08-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, libgputils/gpmemory.c:
    fixed bug #3555114 - "Segfault in gplink on uncategorized instruction"

2012-08-03  Molnar Karoly  <proton7@freemail.hu>
  * header/p16f1516.inc, header/p16f1517.inc, header/p16f1518.inc,
    header/p16f1519.inc: Removed ANSC{0,1} bits from "ANSELC Bits".

2012-08-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/evaluate.c, gpasm/evaluate.h:
    fixed bug #3542579 - "Option -c for gpasm causes different errors"

2012-08-01  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx:
    documented __config deprecation for 16-bit PIC MCU devices

2012-07-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c:
    print word value in code sction with undefined nibbles repleced by "?"

2012-07-28  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: idata and idata_acs directives are not available
    for 12-bit instruction width (PIC10, some PIC12/PIC16) devices,
    according to "MPASM Assembler, MPLINK Object Linker, MPLIB Object
    Librarian User’s Guide"

2012-07-25  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gparchive.c, libgputils/gpreadobj.c, gpasm/parse.y,
    gpasm/cod.c, gplink/script.c, gplink/cod.c, gputils/dump.c
    gputils/block.c: fixed warnings, additional tests for object and
    arhive file consistency
  * gplink/testsuite/gplink.project/lkrfiles/badbank1.lkr,
    gplink/testsuite/gplink.project/lkrfiles/badpage1.lkr,
    gplink/testsuite/gplink.project/lkrfiles/gblconflict.lkr,
    gplink/testsuite/gplink.project/lkrfiles/absconflict.lkr,
    gplink/testsuite/gplink.project/lkrfiles/reloc12.lkr,
    gplink/testsuite/gplink.project/lkrfiles/reloc14.lkr,
    gplink/testsuite/gplink.project/lkrfiles/memseg.lkr,
    gplink/testsuite/gplink.project/lkrfiles/fullbank1.lkr,
    gplink/testsuite/gplink.project/lkrfiles/accesso.lkr,