@@ -1,3 +1,8 @@
+2012-08-16  Borut Razem  <borutr@users.sourceforge.net>
+  * doc/gputils.lyx: gpasm expressions are implemented using 32-bit arithmetic.
+  * gpasm/util.c: implemented gp_strtoi(), partially fixed bug 
+    #252: "Problems interpreting hex numbers in gpasm"
+
 2012-08-11  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/directive.c, libgputils/gpmemory.c:
     fixed bug #3555114 - "Segfault in gplink on uncategorized instruction"
